Adds ngRedux, tassign, implememts increment visits action.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^9.0.0",
     "@angular/animations": "^6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
@@ -23,7 +24,9 @@
     "bootstrap": "3.3.6",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "redux": "^4.0.1",
     "rxjs": "^6.0.0",
+    "tassign": "^1.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
